fix: carousel hidden behind header
- add margin to fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,9 @@ section {
 	/* min-height: 100vh; */
 }
 
-
+#carousel {
+	margin-top: 100px;
+}
 
 
 
@@ -353,6 +355,9 @@ input[type="submit"] {
 	}
 	.picture {
 		width: 80%;
+	}
+	#carousel {
+		margin-top: 130px;
 	}
 }
 
